Fixing text that was too light grey

--- a/wp-content/themes/scripted/scss/_base.scss
+++ b/wp-content/themes/scripted/scss/_base.scss
@@ -115,6 +115,21 @@ a {
   }
 }
 
+.link-white {
+  a {
+    color: $white;
+    opacity: 1;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &:active {
+      opacity: 0.9;
+    }
+  }
+}
+
 // General
 
 .padded {
